fix: shift enter error

--- a/src/components/MainPage/Chatting/Chatting.module.css
+++ b/src/components/MainPage/Chatting/Chatting.module.css
@@ -15,7 +15,7 @@
   width: 85%;
   max-width: 700px;
   min-width: 306px;
-  border-color: var(--color-normal-blue);
+  border-color: var(--color-deep-blue);
   border-style: solid;
   border-width: 1px;
   color: var(--color-black);
@@ -29,7 +29,7 @@
   max-width: 700px;
   min-width: 306px;
   padding: 11px;
-  border-color: var(--color-normal-blue);
+  border-color: var(--color-deep-blue);
   border-style: solid;
   border-width: 1px;
   border-radius: 20px;
@@ -104,7 +104,7 @@
 
 .centerBox {
   flex-grow: 1;
-  padding: 0 var(--spacing-lg) var(--spacing-lg) 0;
+  padding: 0 var(--spacing-xl) var(--spacing-lg) 0;
   line-height: 1.7; /* 행 간 간격 조절 */
   word-break: break-all; /* 긴 단어 줄바꿈 */
   white-space: normal; /* 줄바꿈 허용 */
@@ -359,7 +359,7 @@
   width: 24px;
   height: 24px;
   border: 4px solid var(--color-gray);
-  border-top: 4px solid var(--color-normal-blue);
+  border-top: 4px solid var(--color-deep-blue);
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
