--- a/src/pages/SharePage/SharePage.module.css
+++ b/src/pages/SharePage/SharePage.module.css
@@ -35,7 +35,7 @@
   padding: var(--spacing-base) var(--spacing-sm);
   border: 1px solid var(--color-chat-box);
   border-radius: 15px;
-  box-shadow: 0.1px 0.1px 1px 1px var(--color-normal-blue);
+  box-shadow: 0.1px 0.1px 1px 1px var(--color-deep-blue);
 }
 .userContainer {
   border: none;
@@ -133,7 +133,7 @@
   padding: 10px 1rem;
   border: none;
   border-radius: 50px;
-  background-color: var(--color-normal-blue);
+  background-color: var(--color-deep-blue);
   color: #ffff;
   cursor: pointer;
   font-size: 1rem;
